--- a/VozSegura-1/src/main/resources/application.properties
+++ b/VozSegura-1/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=VozSegura-1
+spring.datasource.url=jdbc:postgresql://localhost/voz_segura
+spring.datasource.username=postgres
+spring.datasource.password=acer12
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
+
